--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "roblox-gamepass-proxy",
+  "name": "roblox-gamepass-backend",
   "version": "1.0.0",
-  "main": "index.js",
+  "description": "Backend para obtener gamepasses de Roblox vía scraping",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js"
+    "start": "node server.js"
   },
   "dependencies": {
     "express": "^4.18.2",
