--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "roblox-gamepass-backend",
   "version": "1.0.0",
-  "description": "Backend para obtener gamepasses de Roblox vía Puppeteer",
+  "description": "Backend para obtener gamepasses de Roblox vía Puppeteer-Core",
   "main": "server.js",
   "type": "module",
   "scripts": {
@@ -9,6 +9,6 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "puppeteer": "^21.3.8"
+    "puppeteer-core": "^21.3.8"
   }
 }
